--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-google-signin": "^2.1.1",
+    "react-native-web": "~0.11.7",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
